last changes -- one small bug

--- a/client/manifest.json
+++ b/client/manifest.json
@@ -1,15 +1,27 @@
 {
-    "name":"hrManager",
-    "version": "0.1.0",
-    "description":"Your HR Manager",
-    "background": {
-        "service_worker":"background.js"
-    },
-    "content_scripts": [
-        {
-            "matches": ["https://web.whatsapp.com/"],
-            "js":["contentScript.js"]
-        }
-    ],
-    "manifest_version": 3
+  "name": "hrManager",
+  "version": "0.1.0",
+  "description": "Your HR Manager",
+  "background": {
+    "service_worker": "background.js"
+  },
+  "content_scripts": [
+    {
+      "matches": ["https://web.whatsapp.com/"],
+      "js": ["contentScript.js"]
+    }
+  ],
+  "web_accessible_resources": [
+    {
+      "resources": [
+            "assets/bookmark.png"
+        ],
+      "matches": ["https://internshala.com/"]
+    }
+  ],
+  "manifest_version": 3,
+  "action": {
+    "default_title": "HR Manager",
+    "default_popup": "popup.html"
+  }
 }
