--- a/client/manifest.json
+++ b/client/manifest.json
@@ -13,10 +13,8 @@
   ],
   "web_accessible_resources": [
     {
-      "resources": [
-            "assets/bookmark.png"
-        ],
-      "matches": ["https://internshala.com/"]
+      "resources": [],
+      "matches": ["<all_urls>"]
     }
   ],
   "manifest_version": 3,
