--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "node": "14 || 15 || 16",
     "npm": ">=6"
   },
+  "proxy":"https://test.inccrew.com",
   "dependencies": {
     "@emotion/cache": "11.9.3",
     "@emotion/react": "11.9.3",
