--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "application",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://test.inccrew.com",
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "@devexpress/dx-react-chart-material-ui": "^3.0.6",
     "@emotion/react": "^11.10.4",
@@ -31,6 +31,7 @@
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "reactflow": "^11.4.0",
+    "read-excel-file": "^5.6.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
