--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
     "chart.js": "^4.1.1",
+    "draft-convert": "^2.1.13",
+    "draft-js": "^0.11.7",
     "firebase": "^9.10.0",
     "formik": "^2.2.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-flow-renderer": "^10.3.17",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
