Group updated, mail updated -- major push with bug

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "application",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000",
+  "proxy": "https://inccrew.com",
   "dependencies": {
     "@devexpress/dx-react-chart-material-ui": "^3.0.6",
     "@emotion/react": "^11.10.4",
